--- a/app/catalog.html
+++ b/app/catalog.html
@@ -376,8 +376,18 @@
             <div class="catalog-gal-column">
               <a class="product-recommend-item product-recommend-item--catalog" href="#">
                 <div class="product-recommend-item-img product-recommend-item-img--catalog">
-                  <div class="product-recommend-item-img-catalog product-recommend-item-img-catalog--first lazyload"   data-rjs="2" style="background-image: url('./images/dest/img/thumbnail_catalog.jpeg');" data-src="./images/dest/img/frame-image2.jpg"></div>
-                  <div class="product-recommend-item-img-catalog product-recommend-item-img-catalog-second lazyload" data-rjs="2" style="background-image: url('./images/dest/img/thumbnail_catalog.jpeg');" data-src="./images/dest/img/recommend-img2.jpg"></div>
+                  <div 
+                    class="product-recommend-item-img-catalog product-recommend-item-img-catalog--first lazyload"
+                    style="background-image: url('./images/dest/img/thumbnail_catalog.jpeg');"
+                    data-src="./images/dest/img/frame-image2.jpg"
+                    data-srcset="./images/dest/img/frame-image2.jpg 1x, ./images/dest/img/frame-image2@2x.jpg 2x">
+                  </div>
+                  <div 
+                    class="product-recommend-item-img-catalog product-recommend-item-img-catalog-second lazyload" 
+                    style="background-image: url('./images/dest/img/thumbnail_catalog.jpeg');"
+                    data-src="./images/dest/img/recommend-img2.jpg"
+                    data-srcset="./images/dest/img/recommend-img2.jpg 1x, ./images/dest/img/recommend-img2@2x.jpg 2x">
+                  </div>
                 </div>
                 <div class="product-recommend-item-preorder-wrapper">
                   <p class="product-recommend-item-preorder">Предзаказ</p>
@@ -419,8 +429,18 @@
             <div class="catalog-gal-column">
               <a class="product-recommend-item product-recommend-item--catalog" href="#">
                 <div class="product-recommend-item-img product-recommend-item-img--catalog">
-                  <div class="product-recommend-item-img-catalog product-recommend-item-img-catalog--first lazyload"   data-rjs="2" style="background-image: url('./images/dest/img/thumbnail_catalog.jpeg');" data-src="./images/dest/img/frame-image2.jpg"></div>
-                  <div class="product-recommend-item-img-catalog product-recommend-item-img-catalog-second lazyload" data-rjs="2" style="background-image: url('./images/dest/img/thumbnail_catalog.jpeg');" data-src="./images/dest/img/recommend-img2.jpg"></div>
+                  <div 
+                    class="product-recommend-item-img-catalog product-recommend-item-img-catalog--first lazyload"
+                    style="background-image: url('./images/dest/img/thumbnail_catalog.jpeg');"
+                    data-src="./images/dest/img/frame-image2.jpg"
+                    data-srcset="./images/dest/img/frame-image2.jpg 1x, ./images/dest/img/frame-image2@2x.jpg 2x">
+                  </div>
+                  <div 
+                    class="product-recommend-item-img-catalog product-recommend-item-img-catalog-second lazyload" 
+                    style="background-image: url('./images/dest/img/thumbnail_catalog.jpeg');"
+                    data-src="./images/dest/img/recommend-img2.jpg"
+                    data-srcset="./images/dest/img/recommend-img2.jpg 1x, ./images/dest/img/recommend-img2@2x.jpg 2x">
+                  </div>
                 </div>
                 <div class="product-recommend-item-preorder-wrapper">
                   <p class="product-recommend-item-preorder">Предзаказ</p>
@@ -462,8 +482,18 @@
             <div class="catalog-gal-column">
               <a class="product-recommend-item product-recommend-item--catalog" href="#">
                 <div class="product-recommend-item-img product-recommend-item-img--catalog">
-                  <div class="product-recommend-item-img-catalog product-recommend-item-img-catalog--first lazyload"   data-rjs="2" style="background-image: url('./images/dest/img/thumbnail_catalog.jpeg');" data-src="./images/dest/img/frame-image2.jpg"></div>
-                  <div class="product-recommend-item-img-catalog product-recommend-item-img-catalog-second lazyload" data-rjs="2" style="background-image: url('./images/dest/img/thumbnail_catalog.jpeg');" data-src="./images/dest/img/recommend-img2.jpg"></div>
+                  <div 
+                    class="product-recommend-item-img-catalog product-recommend-item-img-catalog--first lazyload"
+                    style="background-image: url('./images/dest/img/thumbnail_catalog.jpeg');"
+                    data-src="./images/dest/img/frame-image2.jpg"
+                    data-srcset="./images/dest/img/frame-image2.jpg 1x, ./images/dest/img/frame-image2@2x.jpg 2x">
+                  </div>
+                  <div 
+                    class="product-recommend-item-img-catalog product-recommend-item-img-catalog-second lazyload" 
+                    style="background-image: url('./images/dest/img/thumbnail_catalog.jpeg');"
+                    data-src="./images/dest/img/recommend-img2.jpg"
+                    data-srcset="./images/dest/img/recommend-img2.jpg 1x, ./images/dest/img/recommend-img2@2x.jpg 2x">
+                  </div>
                 </div>
                 <div class="product-recommend-item-preorder-wrapper">
                   <p class="product-recommend-item-preorder">Предзаказ</p>
@@ -504,8 +534,18 @@
             <div class="catalog-gal-column">
               <a class="product-recommend-item product-recommend-item--catalog" href="#">
                 <div class="product-recommend-item-img product-recommend-item-img--catalog">
-                  <div class="product-recommend-item-img-catalog product-recommend-item-img-catalog--first lazyload"   data-rjs="2" style="background-image: url('./images/dest/img/thumbnail_catalog.jpeg');" data-src="./images/dest/img/frame-image2.jpg"></div>
-                  <div class="product-recommend-item-img-catalog product-recommend-item-img-catalog-second lazyload" data-rjs="2" style="background-image: url('./images/dest/img/thumbnail_catalog.jpeg');" data-src="./images/dest/img/recommend-img2.jpg"></div>
+                  <div 
+                    class="product-recommend-item-img-catalog product-recommend-item-img-catalog--first lazyload"
+                    style="background-image: url('./images/dest/img/thumbnail_catalog.jpeg');"
+                    data-src="./images/dest/img/frame-image2.jpg"
+                    data-srcset="./images/dest/img/frame-image2.jpg 1x, ./images/dest/img/frame-image2@2x.jpg 2x">
+                  </div>
+                  <div 
+                    class="product-recommend-item-img-catalog product-recommend-item-img-catalog-second lazyload" 
+                    style="background-image: url('./images/dest/img/thumbnail_catalog.jpeg');"
+                    data-src="./images/dest/img/recommend-img2.jpg"
+                    data-srcset="./images/dest/img/recommend-img2.jpg 1x, ./images/dest/img/recommend-img2@2x.jpg 2x">
+                  </div>
                 </div>
                 <div class="product-recommend-item-preorder-wrapper">
                   <p class="product-recommend-item-preorder">Предзаказ</p>
@@ -546,8 +586,18 @@
             <div class="catalog-gal-column">
               <a class="product-recommend-item product-recommend-item--catalog" href="#">
                 <div class="product-recommend-item-img product-recommend-item-img--catalog">
-                  <div class="product-recommend-item-img-catalog product-recommend-item-img-catalog--first lazyload"   data-rjs="2" style="background-image: url('./images/dest/img/thumbnail_catalog.jpeg');" data-src="./images/dest/img/frame-image2.jpg"></div>
-                  <div class="product-recommend-item-img-catalog product-recommend-item-img-catalog-second lazyload" data-rjs="2" style="background-image: url('./images/dest/img/thumbnail_catalog.jpeg');" data-src="./images/dest/img/recommend-img2.jpg"></div>
+                  <div 
+                    class="product-recommend-item-img-catalog product-recommend-item-img-catalog--first lazyload"
+                    style="background-image: url('./images/dest/img/thumbnail_catalog.jpeg');"
+                    data-src="./images/dest/img/frame-image2.jpg"
+                    data-srcset="./images/dest/img/frame-image2.jpg 1x, ./images/dest/img/frame-image2@2x.jpg 2x">
+                  </div>
+                  <div 
+                    class="product-recommend-item-img-catalog product-recommend-item-img-catalog-second lazyload" 
+                    style="background-image: url('./images/dest/img/thumbnail_catalog.jpeg');"
+                    data-src="./images/dest/img/recommend-img2.jpg"
+                    data-srcset="./images/dest/img/recommend-img2.jpg 1x, ./images/dest/img/recommend-img2@2x.jpg 2x">
+                  </div>
                 </div>
                 <div class="product-recommend-item-preorder-wrapper">
                   <p class="product-recommend-item-preorder">Предзаказ</p>
@@ -588,8 +638,18 @@
             <div class="catalog-gal-column">
               <a class="product-recommend-item product-recommend-item--catalog" href="#">
                 <div class="product-recommend-item-img product-recommend-item-img--catalog">
-                  <div class="product-recommend-item-img-catalog product-recommend-item-img-catalog--first lazyload"   data-rjs="2" style="background-image: url('./images/dest/img/thumbnail_catalog.jpeg');" data-src="./images/dest/img/frame-image2.jpg"></div>
-                  <div class="product-recommend-item-img-catalog product-recommend-item-img-catalog-second lazyload" data-rjs="2" style="background-image: url('./images/dest/img/thumbnail_catalog.jpeg');" data-src="./images/dest/img/recommend-img2.jpg"></div>
+                  <div 
+                    class="product-recommend-item-img-catalog product-recommend-item-img-catalog--first lazyload"
+                    style="background-image: url('./images/dest/img/thumbnail_catalog.jpeg');"
+                    data-src="./images/dest/img/frame-image2.jpg"
+                    data-srcset="./images/dest/img/frame-image2.jpg 1x, ./images/dest/img/frame-image2@2x.jpg 2x">
+                  </div>
+                  <div 
+                    class="product-recommend-item-img-catalog product-recommend-item-img-catalog-second lazyload" 
+                    style="background-image: url('./images/dest/img/thumbnail_catalog.jpeg');"
+                    data-src="./images/dest/img/recommend-img2.jpg"
+                    data-srcset="./images/dest/img/recommend-img2.jpg 1x, ./images/dest/img/recommend-img2@2x.jpg 2x">
+                  </div>
                 </div>
                 <div class="product-recommend-item-preorder-wrapper">
                   <p class="product-recommend-item-preorder">Предзаказ</p>
@@ -630,8 +690,18 @@
             <div class="catalog-gal-column">
               <a class="product-recommend-item product-recommend-item--catalog" href="#">
                 <div class="product-recommend-item-img product-recommend-item-img--catalog">
-                  <div class="product-recommend-item-img-catalog product-recommend-item-img-catalog--first lazyload"   data-rjs="2" style="background-image: url('./images/dest/img/thumbnail_catalog.jpeg');" data-src="./images/dest/img/frame-image2.jpg"></div>
-                  <div class="product-recommend-item-img-catalog product-recommend-item-img-catalog-second lazyload" data-rjs="2" style="background-image: url('./images/dest/img/thumbnail_catalog.jpeg');" data-src="./images/dest/img/recommend-img2.jpg"></div>
+                  <div 
+                    class="product-recommend-item-img-catalog product-recommend-item-img-catalog--first lazyload"
+                    style="background-image: url('./images/dest/img/thumbnail_catalog.jpeg');"
+                    data-src="./images/dest/img/frame-image2.jpg"
+                    data-srcset="./images/dest/img/frame-image2.jpg 1x, ./images/dest/img/frame-image2@2x.jpg 2x">
+                  </div>
+                  <div 
+                    class="product-recommend-item-img-catalog product-recommend-item-img-catalog-second lazyload" 
+                    style="background-image: url('./images/dest/img/thumbnail_catalog.jpeg');"
+                    data-src="./images/dest/img/recommend-img2.jpg"
+                    data-srcset="./images/dest/img/recommend-img2.jpg 1x, ./images/dest/img/recommend-img2@2x.jpg 2x">
+                  </div>
                 </div>
                 <div class="product-recommend-item-preorder-wrapper">
                   <p class="product-recommend-item-preorder">Предзаказ</p>
@@ -672,8 +742,18 @@
             <div class="catalog-gal-column">
               <a class="product-recommend-item product-recommend-item--catalog" href="#">
                 <div class="product-recommend-item-img product-recommend-item-img--catalog">
-                  <div class="product-recommend-item-img-catalog product-recommend-item-img-catalog--first lazyload"   data-rjs="2" style="background-image: url('./images/dest/img/thumbnail_catalog.jpeg');" data-src="./images/dest/img/frame-image2.jpg"></div>
-                  <div class="product-recommend-item-img-catalog product-recommend-item-img-catalog-second lazyload" data-rjs="2" style="background-image: url('./images/dest/img/thumbnail_catalog.jpeg');" data-src="./images/dest/img/recommend-img2.jpg"></div>
+                  <div 
+                    class="product-recommend-item-img-catalog product-recommend-item-img-catalog--first lazyload"
+                    style="background-image: url('./images/dest/img/thumbnail_catalog.jpeg');"
+                    data-src="./images/dest/img/frame-image2.jpg"
+                    data-srcset="./images/dest/img/frame-image2.jpg 1x, ./images/dest/img/frame-image2@2x.jpg 2x">
+                  </div>
+                  <div 
+                    class="product-recommend-item-img-catalog product-recommend-item-img-catalog-second lazyload" 
+                    style="background-image: url('./images/dest/img/thumbnail_catalog.jpeg');"
+                    data-src="./images/dest/img/recommend-img2.jpg"
+                    data-srcset="./images/dest/img/recommend-img2.jpg 1x, ./images/dest/img/recommend-img2@2x.jpg 2x">
+                  </div>
                 </div>
                 <div class="product-recommend-item-preorder-wrapper">
                   <p class="product-recommend-item-preorder">Предзаказ</p>
