add product err

--- a/app/product.html
+++ b/app/product.html
@@ -407,6 +407,7 @@
                 <span class="text-disabled">В корзинe</span>
               </button>
             </div>
+            <span class="product-about-buy-error product-about-buy-error--show">Ошибка</span>
             <button class="btn-size product-about-buy-btn-size" onclick="onTogglePopUpSize()">
               <span>Выбрать размер</span>
             </button>
