--- a/app/product.html
+++ b/app/product.html
@@ -11,6 +11,7 @@
   </head>
 
   <body>
+    <div class="page-content">
     <header class="main-header">
       <div class="main-header-wrapper">
         <button
@@ -166,24 +167,34 @@
             <div class="product-gallery-slider">
               <!-- Для отображения изображения в пагинации, нужно к слайду добавить "data-image" атрибут с урлом -->
               <div class="product-gallery-slider-item" data-image="./images/dest/img/product-gal-img.jpg" data-rjs="2" >
-                <a class="product-gallery-slider-item-img" href="./images/dest/img/product-gal-img.jpg"  data-fancybox="gallery" style="background-image: url('./images/dest/img/product-gal-img.jpg');"></a>
+                <a class="product-gallery-slider-item-img" href="./images/dest/img/product-gal-img.jpg"  data-fancybox="gallery" data-width="2048" data-height="1365" style="background-image: url('./images/dest/img/product-gal-img.jpg');"></a>
               </div>
               <div class="product-gallery-slider-item" data-image="./images/dest/img/product-gal-img.jpg" data-rjs="2">
-                <a class="product-gallery-slider-item-img" href="./images/dest/img/product-gal-img.jpg"  data-fancybox="gallery" style="background-image: url('./images/dest/img/product-gal-img.jpg');"></a>
-              </div>
-              <div class="product-gallery-slider-item" data-image="./images/dest/img/product-gal-img.jpg" data-rjs="2">
-                <a href="#myVideo" class="product-gallery-slider-item-img product-gallery-slider-item-img--video" data-fancybox="gallery" style="background-image: url('./images/dest/img/product-gal-img.jpg');">
+                <a href="#myVideo" class="product-gallery-slider-item-img" data-fancybox="gallery">
+                  <!-- Превью -->
                   <video 
-                  id="myVideo"
-                  class="popup-video"
-                  loop
-                  muted
-                  style="display:none;">
-                    <source src="https://www.html5rocks.com/en/tutorials/video/basics/Chrome_ImF.webm" type="video/webm">
-                    <source src="https://www.html5rocks.com/en/tutorials/video/basics/Chrome_ImF.mp4" type="video/mp4">
+                    class="slider-video"
+                    loop
+                    muted
+                    autoplay>
+                    <source src="./video/productVideo.mp4" type="video/mp4">
+                    Your browser doesn't support HTML5 video tag.
+                  </video>
+                  <!-- Оригинал -->
+                  <video 
+                    id="myVideo"
+                    class="popup-video"
+                    loop
+                    muted
+                    autoplay 
+                    style="display: none;">
+                    <source src="./video/productVideo.mp4" type="video/mp4">
                     Your browser doesn't support HTML5 video tag.
                 </video>
                 </a>
+              </div>
+              <div class="product-gallery-slider-item" data-image="./images/dest/img/product-gal-img.jpg" data-rjs="2">
+                <a class="product-gallery-slider-item-img" href="./images/dest/img/product-gal-img.jpg"  data-fancybox="gallery"  data-width="2048" data-height="1365" style="background-image: url('./images/dest/img/product-gal-img.jpg');"></a>
               </div>
             </div>
           </div>
@@ -934,6 +945,13 @@
     </article>
 
     <script src="js/app.min.js"></script>
-    <script>getScroll();</script>
+    <script>
+    getScroll();
+    facnyBoxInit();
+    document.querySelectorAll('.slider-video').forEach((video) => {
+      video.play();
+    });
+    </script>
+   </div>
   </body>
 </html>
